    The QT_INSTALL_... properties are now automatically prefixed with the sysroot;
    the raw values are available as QT_INSTALL_.../raw and the sysroot as QT_SYSROOT.
    The new QT_HOST_... properties can be used to refer to the Qt host tools.
  * Several functions and built-in variables were modified to return normalized paths.

- QTextCodecPlugin has been removed since it is no longer used. All text codecs
  are now built into QtCore.

- QDir::NoDotAndDotDot is QDir::NoDot|QDir::NoDotDot therefore there is no need
  to use or check both.

- QFSFileEngine, QAbstractFileEngine, QAbstractFileEngineIterator and
  QAbstractFileEngineHandler were removed from public API and are no longer
  exported. They may temporarily live as private implementation details, but
  they may be altogether dropped or otherwise changed at will in the future.

- QLocale
  * toShort(), toUShort(), toInt(), toUInt(), toLongLong() and toULongLong() no
    longer take a parameter for base, they will only perform localised base 10
    conversions. For converting other bases use the QString methods instead.

- QSystemLocale has been removed from the public API.

- QSqlQueryModel::indexInQuery() is now virtual. See note below under QtSql.

- QSqlDriver::subscribeToNotification, unsubscribeFromNotification,
  subscribedToNotifications, isIdentifierEscaped, and stripDelimiters
  are now virtual. See note below under QtSql.

- qMacVersion() has been removed. Use QSysInfo::macVersion() or
  QSysInfo::MacintoshVersion instead.

- QColorDialog::customColor() now returns a QColor value instead of QRgb.
  QColorDialog::setCustomColor() and QColorDialog::setStandardColor() now
  take a QColor value for their second parameter instead of QRgb.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements