@@ -1,6 +1,6 @@
 load(exclusive_builds)
 ### Qt 5: remove "uic" and "resources" - or add "qt"
-CONFIG = lex yacc warn_on debug uic resources $$CONFIG
+CONFIG = lex yacc warn_on debug uic resources exceptions $$CONFIG
 
 !build_pass:exists($$_PRO_FILE_PWD_/sync.profile) {
     PRO_BASENAME = $$basename(_PRO_FILE_)
