@@ -2,4 +2,5 @@ CONFIG -= exceptions_off
 QMAKE_CFLAGS *= $$QMAKE_CFLAGS_EXCEPTIONS_ON
 QMAKE_CXXFLAGS *= $$QMAKE_CXXFLAGS_EXCEPTIONS_ON
 QMAKE_LFLAGS *= $$QMAKE_LFLAGS_EXCEPTIONS_ON
+DEFINES -= QT_NO_EXCEPTIONS
 
