@@ -2,4 +2,4 @@ CONFIG -= exceptions
 QMAKE_CFLAGS += $$QMAKE_CFLAGS_EXCEPTIONS_OFF
 QMAKE_CXXFLAGS += $$QMAKE_CXXFLAGS_EXCEPTIONS_OFF
 QMAKE_LFLAGS += $$QMAKE_LFLAGS_EXCEPTIONS_OFF
-
+DEFINES += QT_NO_EXCEPTIONS
