@@ -56,6 +56,7 @@ QMAKE_CFLAGS_SHLIB	=
 QMAKE_CFLAGS_STATIC_LIB	= $$QMAKE_CFLAGS_SHLIB
 QMAKE_CFLAGS_YACC	= -woff 1110,1174,3262
 QMAKE_CFLAGS_THREAD	=
+QMAKE_CFLAGS_EXCEPTIONS_OFF = -LANG:exceptions=off
 
 QMAKE_CXX		= CC
 QMAKE_CXXFLAGS		= -64 -signed -LANG:std:libc_in_namespace_std=ON -woff 1209,1355,1375,1424,3303
@@ -68,6 +69,7 @@ QMAKE_CXXFLAGS_SHLIB	= $$QMAKE_CFLAGS_SHLIB
 QMAKE_CXXFLAGS_STATIC_LIB = $$QMAKE_CFLAGS_STATIC_LIB
 QMAKE_CXXFLAGS_YACC	= $$QMAKE_CFLAGS_YACC
 QMAKE_CXXFLAGS_THREAD	=
+QMAKE_CXXFLAGS_EXCEPTIONS_OFF = $$QMAKE_CFLAGS_EXCEPTIONS_OFF
 
 QMAKE_INCDIR		=
 QMAKE_LIBDIR		=
@@ -89,6 +91,7 @@ QMAKE_LFLAGS_SONAME	= -Wl,-soname,
 QMAKE_LFLAGS_THREAD	=
 QMAKE_LFLAGS_NOUNDEF	= -Wl,-no_unresolved
 QMAKE_LFLAGS_RPATH	= -Wl,-rpath,
+QMAKE_LFLAGS_EXCEPTIONS_OFF = $$QMAKE_CFLAGS_EXCEPTIONS_OFF
 
 QMAKE_LIBS		=
 QMAKE_LIBS_DYNLOAD	=
