@@ -4,7 +4,7 @@ TARGET     = QtConcurrent
 QPRO_PWD   = $$PWD
 QT         = core-private
 
-CONFIG += module
+CONFIG += module exceptions
 MODULE_PRI = ../modules/qt_concurrent.pri
 
 DEFINES   += QT_BUILD_CONCURRENT_LIB QT_NO_USING_NAMESPACE
