@@ -238,6 +238,12 @@ information about a particular change.
     the raw values are available as QT_INSTALL_.../raw and the sysroot as QT_SYSROOT.
     The new QT_HOST_... properties can be used to refer to the Qt host tools.
   * Several functions and built-in variables were modified to return normalized paths.
+  * The -(no-)exception flags in configure have been removed. Qt modules are now compiled
+    without exceptions by default, as they do not use them and can neither handle them
+    properly. Qt Core still has exceptions enabled to correctly throw bad_alloc exceptions
+    in our tool classes.
+    Whether code should be compiled with exception support enabled or disabled can be
+    controlled by a CONFIG += exceptions/exceptions_off setting in the .pro file.
 
 - QTextCodecPlugin has been removed since it is no longer used. All text codecs
   are now built into QtCore.
